# Dev_Training

./: ExampleCCode.c  ExampleCCode.h  README.md
ExampleCCodeTutorial/: CMakeLists.txt  ExampleCCodeFuncs.c  ExampleCCodeMain.c
ExampleCCodeTutorial/doc/: ExampleCCodeTutorial.txt
ExampleCCodeTutorial/include/: ExampleCCode.h
ExampleCCodeTutorial/systemTests/: STExampleCCode.py
ExampleCCodeTutorial/unitTests/: UTforExampleCCode.c
TeamPicker/: RandomRoster.people  TeamPicker.py  Trainee_Assignment_20161101.txt
include/: ExampleCCode.h
unitTests/: UTforExampleCCode.c
